# Copyright 2017 Marcus Heese
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
[package]
name = "pkcs11"
version = "0.5.0"
authors = ["Marcus Heese <marcus.heese@gmail.com>"]
description = "Rust PKCS#11 Library"
#documentation = "https://github.com/mheese/rust-pkcs11"
homepage = "https://github.com/mheese/rust-pkcs11"
repository = "https://github.com/mheese/rust-pkcs11"
readme = "README.md"
keywords = ["pkcs11", "cryptoki"]
categories = ["external-ffi-bindings", "cryptography", "hardware-support"]
license = "Apache-2.0"
license-file = "LICENSE"
exclude = [
    "pkcs11-docs/**",
]

[badges]
maintenance = { status = "actively-developed" }
codecov = { repository = "mheese/rust-pkcs11", branch = "master", service = "github" }
is-it-maintained-issue-resolution = { repository = "mheese/rust-pkcs11" }
is-it-maintained-open-issues = { repository = "mheese/rust-pkcs11" }

[dependencies]
libloading = "^0.5"
num-bigint = "^0.2"
#libc = "0.2.33"

[dev-dependencies]
num-traits = "^0.1"
hex = "^0.3"
serial_test = "~0.1"
serial_test_derive = "~0.1"
